[package]
name = "windows-cat"
version = "1.0.3"
edition = "2021"
description = "unix cat command for windows"
readme = "README.md"
repository = "https://github.com/tralwdwd/windows-cat"
license = "MIT"

[dependencies]
clap = {version="4.5.20", default-features=false, features=["std"]}

[[bin]]
name = "cat"
path = "src/main.rs"